# mindscope_utilities

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: event_triggered_response_example.ipynb  event_triggered_response_example_extended.ipynb  tidy_neural_data_example.ipynb
mindscope_utilities/: __init__.py  general_utilities.py
mindscope_utilities/ophys/: __init__.py  data_formatting.py
mindscope_utilities/visual_behavior_ophys/: README.md  data_formatting.py  plotting_utilities.py
tests/: conftest.py
tests/mindscope_utilities/: test_general_utilities.py
tests/mindscope_utilities/ophys/: test_data_formatting.py
tests/mindscope_utilities/visual_behavior_ophys/: test_data_formatting.py
