[metadata]
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown

[flake8] 
max-line-length = 160 
ignore = 
    # line too long (79), we use black (88)
    E501,
    # whitespace before ':'
    E203,
    # line break before binary operator
    W503,
    # imports at the top
    E402,